pillars and vision section added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <button class="nav-btn">Sign in</button>
         </nav>
 
-        <section class="banner-section">
+        <section class="banner-section section-margin">
             <div class="banner-content">
                 <h4 class="banner-title-1">Bangladesh 2.0</h4>
                 <h2 class="banner-title-2">
@@ -35,6 +35,63 @@
 
             </div>
 
+
+        </section>
+
+        <section class="pillars-of-bd section-margin">
+            <div class="section-title">Pillars of "Bangladesh 2.0"</div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="./assets/card-icon.png" alt="" class="card-img">
+                    <div class="card-title">Innovation</div>
+                    <div class="card-description">Driving progress through creativity and cutting-edge technology</div>
+                </div>
+                <div class="card">
+                    <img src="./assets/card-icon.png" alt="" class="card-img">
+                    <div class="card-title">Sustainability</div>
+                    <div class="card-description">Building a greener, resilient future with eco-conscious solutions.</div>
+                </div>
+                <div class="card">
+                    <img src="./assets/card-icon.png" alt="" class="card-img">
+                    <div class="card-title">Infrastructure</div>
+                    <div class="card-description">Enhancing connectivity and development with modernized systems.</div>
+                </div>
+                <div class="card">
+                    <img src="./assets/card-icon.png" alt="" class="card-img">
+                    <div class="card-title">Empowerment</div>
+                    <div class="card-description">Uplifting communities through education, equity, and opportunity.</div>
+                </div>
+            </div>
+        </section>
+
+        <section class="vision-future section-margin">
+            <div class="section-title">The Vision of Future</div>
+
+            <div class="section-description card-description">
+                Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.
+
+            </div>
+
+            <div class="card-container">
+                <div class="card vcard1">
+                    <img src="./assets/card-icon.png" alt="" class="card-img">
+                    <div class="card-title">Digital Transformation</div>
+                    <div class="card-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</div>
+                    <button class="btn-primary">Learn More</button>
+                </div>
+                <div class="card vcard2">
+                    <img src="./assets/card-icon.png" alt="" class="card-img">
+                    <div class="card-title">Green Energy</div>
+                    <div class="card-description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</div>
+                    <button class="btn-primary">Learn More</button>
+                </div>
+                <div class="card vcard3">
+                    <img src="./assets/card-icon.png" alt="" class="card-img">
+                    <div class="card-title">Modern Infrastructure</div>
+                    <div class="card-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</div>
+                    <button class="btn-primary">Learn More</button>
+                </div>
+            </div>
 
         </section>
 
