--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="style.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -38,6 +40,12 @@
 
         </section>
 
+
+    </header>
+
+    <main>
+
+
         <section class="pillars-of-bd section-margin">
             <div class="section-title">Pillars of "Bangladesh 2.0"</div>
             <div class="card-container">
@@ -49,7 +57,8 @@
                 <div class="card">
                     <img src="./assets/card-icon.png" alt="" class="card-img">
                     <div class="card-title">Sustainability</div>
-                    <div class="card-description">Building a greener, resilient future with eco-conscious solutions.</div>
+                    <div class="card-description">Building a greener, resilient future with eco-conscious solutions.
+                    </div>
                 </div>
                 <div class="card">
                     <img src="./assets/card-icon.png" alt="" class="card-img">
@@ -59,7 +68,8 @@
                 <div class="card">
                     <img src="./assets/card-icon.png" alt="" class="card-img">
                     <div class="card-title">Empowerment</div>
-                    <div class="card-description">Uplifting communities through education, equity, and opportunity.</div>
+                    <div class="card-description">Uplifting communities through education, equity, and opportunity.
+                    </div>
                 </div>
             </div>
         </section>
@@ -67,8 +77,10 @@
         <section class="vision-future section-margin">
             <div class="section-title">The Vision of Future</div>
 
-            <div class="section-description card-description">
-                Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.
+            <div class="section-description">
+                Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting
+                inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital
+                transformation, and robust infrastructure, the country is set to become a global model of development.
 
             </div>
 
@@ -76,32 +88,159 @@
                 <div class="card vcard1">
                     <img src="./assets/card-icon.png" alt="" class="card-img">
                     <div class="card-title">Digital Transformation</div>
-                    <div class="card-description">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</div>
-                    <button class="btn-primary">Learn More</button>
+                    <div class="card-description">Creating a nationwide digital ecosystem to enhance connectivity and
+                        access to services for all citizens.</div>
+                    <button class="btn-primary v1-btn">Learn More</button>
                 </div>
                 <div class="card vcard2">
                     <img src="./assets/card-icon.png" alt="" class="card-img">
                     <div class="card-title">Green Energy</div>
-                    <div class="card-description">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</div>
-                    <button class="btn-primary">Learn More</button>
+                    <div class="card-description">Investments in solar and wind energy to ensure a sustainable and
+                        eco-friendly future.</div>
+                    <button class="btn-primary v2-btn">Learn More</button>
                 </div>
                 <div class="card vcard3">
                     <img src="./assets/card-icon.png" alt="" class="card-img">
                     <div class="card-title">Modern Infrastructure</div>
-                    <div class="card-description">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</div>
-                    <button class="btn-primary">Learn More</button>
+                    <div class="card-description">Building state-of-the-art infrastructure to support economic growth
+                        and global competitiveness.</div>
+                    <button class="btn-primary v3-btn">Learn More</button>
                 </div>
             </div>
 
         </section>
 
-    </header>
+        <section class="quote section-margin">
+            <p class="card-description">The world we live in has been designed to concentrate wealth and resources into
+                the hands of a few while leaving billions behind. This isn’t a flaw—it’s a feature of the system we
+                built. If we want a fairer world, we have to redesign that system entirely, creating institutions and
+                businesses that prioritize people and planet over profit.
+            </p>
 
-    <main>
+            <p class="card-description">Social business is the bridge between the heart and the mind—between compassion
+                and creativity. It takes the selfless desire to help others and combines it with the entrepreneurial
+                spirit to create sustainable solutions to the world’s problems. It’s not about giving back; it’s about
+                changing the system so that it never takes away in the first place.
+            </p>
+            <h4 class="card-title">Dr. Muhammad Yunus</h4>
+            <h5 class="card-description">Chief Adviser of the People's Republic of Bangladesh</h5>
+        </section>
+
+        <section class="opinion section-margin">
+
+        </section>
+
+        <section class="recent-news section-margin">
+
+            <div class="section-title">Recent News</div>
+            <div class="section-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in
+                renewable energy, digital transformation, and robust infrastructure, the country is set to become a
+                global model of development.</div>
+
+            <div class="news-card">
+                <img src="./assets/satelite.png" alt="" class="news-img">
+                <div class="news-content">
+                    <div class="news-title">Bangladesh Launches New Satellite</div>
+                    <img src="./assets/al-jazeera.png" alt="" class="aljazeera">
+                    <div class="description">Not until the creation and maintenance of decent conditions of life for all
+                        people are recognized and accepted as a common obligation of all people and all countries—not
+                        until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</div>
+                    <button class="btn-primary">Read More</button>
+                </div>
+            </div>
+            <div class="news-card news-card2">
+                <img src="./assets/satelite.png" alt="" class="news-img">
+                <div class="news-content">
+                    <div class="news-title">Bangladesh Launches New Satellite</div>
+                    <img src="./assets/al-jazeera.png" alt="" class="aljazeera">
+                    <div class="description">Not until the creation and maintenance of decent conditions of life for all
+                        people are recognized and accepted as a common obligation of all people and all countries—not
+                        until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</div>
+                    <button class="btn-primary">Read More</button>
+                </div>
+            </div>
+            <div class="news-card">
+                <img src="./assets/satelite.png" alt="" class="news-img">
+                <div class="news-content">
+                    <div class="news-title">Bangladesh Launches New Satellite</div>
+                    <img src="./assets/al-jazeera.png" alt="" class="aljazeera">
+                    <div class="description">Not until the creation and maintenance of decent conditions of life for all
+                        people are recognized and accepted as a common obligation of all people and all countries—not
+                        until then shall we,
+                        with a certain degree of justification, be able to speak of humankind as civilized</div>
+                    <button class="btn-primary">Read More</button>
+                </div>
+            </div>
+
+            </div>
+
+        </section>
+
+        <section class="donate section-margin">
+            <div class="section-title">Donate Today</div>
+            <div class="section-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in
+                renewable energy, digital transformation, and robust infrastructure.</div>
+            <div class="donate-card-container">
+                <div class="donate-card">100 Taka</div>
+                <div class="donate-card donate-card2">200 Taka</div>
+                <div class="donate-card">500 Taka</div>
+                <div class="donate-card">1000 Taka</div>
+            </div>
+            <div class="donate-input">
+                <input type="text" name="donate-field" id="donate-field" placeholder="Other Amount (Taka)">
+
+            </div>
+
+            <button class="btn-primary">Donate Now</button>
+        </section>
+
+
+        <section class="newsletter section-margin">
+            <div class="section-title">Subscribe Newsletter
+            </div>
+            <div class="section-description">Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing
+                cutting-edge technology, promoting inclusive growth.
+            </div>
+            <div class="subscribe">
+                <input type="email" id="news-mail" placeholder="Enter your email here">
+                <button class="btn-primary news-btn">Subscribe</button>
+            </div>
+            <div class="section-description">We promise not to spam you!</div>
+            
+
+        </section>
+
+
+
+
 
     </main>
 
     <footer>
+
+        <div class="footer-title">
+            <p>Bangladesh 2.0</p>
+        </div>
+
+        <div class="horizontal-line"></div>
+
+        <div class="footer-img-container">
+            <img src="./assets/facebook.png" alt="">
+            <img src="./assets/instagram.png" alt="">
+            <img src="./assets/x.png" alt="">
+        </div>
+
+
+
+
+
+
+
+
 
     </footer>
 </body>
