--- a/index.html
+++ b/index.html
@@ -126,9 +126,52 @@
             <h5 class="card-description">Chief Adviser of the People's Republic of Bangladesh</h5>
         </section>
 
-        <section class="opinion section-margin">
-
-        </section>
+        <section class="opinion-section section-margin">
+            <h2 class="section-title">Your Opinion Matters</h2>
+            <div class="table-container">
+              <table class="opinion-table">
+                <thead>
+                  <tr>
+                    <th>Questions</th>
+                    <th>Select Your Opinion</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                    <td>
+                      <select class="opinion-dropdown">
+                        <option>Yes, I Agree</option>
+                        <option>No, I Disagree</option>
+                        <option>Not Sure</option>
+                      </select>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                    <td>
+                      <select class="opinion-dropdown">
+                        <option>Yes, I Agree</option>
+                        <option>No, I Disagree</option>
+                        <option>Not Sure</option>
+                      </select>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>Do you believe Bangladesh is on the right path toward becoming a developed nation?</td>
+                    <td>
+                      <select class="opinion-dropdown">
+                        <option>Yes, I Agree</option>
+                        <option>No, I Disagree</option>
+                        <option>Not Sure</option>
+                      </select>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </section>
+          
 
         <section class="recent-news section-margin">
 
